# linqs-layout

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  app_main.py  inspect_dxf.py  requirements-viewer.txt  view_dxf.py  view_topo06.py
.github/workflows/: release-assets.yml
dxfcore/: CMakeLists.txt  build.bat  build.sh  dxf_parse.cpp
packaging/: LINQSLayout-win.spec  LINQSLayout.icns  LINQSLayout.spec  _version.py  build_app.sh  build_win.bat  check_release_assets.py  install.sh  make_dmg.sh  make_icns.sh  update.sh
packaging/windows/: installer.iss
pydxf/: __init__.py  loader.py
tests/: WINDOWS_TEST_PLAN.md  sample.dxf  test_entrypoints.py  test_imports.py  test_interactive.py  test_measure_throttle.py  test_render.py  test_scene_fill.py  test_single_instance.py  test_smoke.py  test_snap.py  test_triangulate.py  test_updater.py
viewer/: __init__.py  app.py  camera.py  offscreen.py  overlay.py  palette.py  panel.py  qt_app.py  scene.py  snap.py  style.py  triangulate.py  update.py  viewport.py  window.py
